<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:layout_marginTop="@dimen/dimen_0"
            android:layout_marginRight="@dimen/dimen_0"
            android:layout_marginLeft="@dimen/dimen_0"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/line_0"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/theme_window_background"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="@dimen/dimen_3"
                        android:layout_marginRight="@dimen/line_0"
                        android:layout_weight="0.7"
                        android:background="@android:color/black"
                        android:gravity="center"
                        android:minHeight="@dimen/dimen_0"
                        android:orientation="vertical">

                        <com.med.finder.cliente.utilidades.CustomFontTextView
                            android:id="@+id/lblNombre"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:gravity="center"
                            android:textColor="@color/theme_window_background"
                            android:text="@string/str_especialidad"
                            android:textSize="@dimen/text_1"
                            app:fontAttr="@string/font_myraid_bold" />

                    </LinearLayout>



                </LinearLayout>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/line_2"
                    android:background="@color/theme_window_background"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <com.med.finder.cliente.utilidades.CustomFontTextView
                        android:id="@+id/lblDetalle"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:minHeight="@dimen/dimen_3"
                        android:gravity="center"
                        android:text="producto"
                        android:textColor="@color/primary_text"
                        android:textSize="@dimen/text_1"
                        app:fontAttr="@string/font_myraid_roman" />

                </LinearLayout>



            </LinearLayout>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/line_2"
        android:layout_marginRight="@dimen/dimen_0"
        android:layout_marginLeft="@dimen/dimen_0"
        android:layout_marginBottom="@dimen/dimen_0"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/line_2"
            android:background="@color/theme_window_background"
            android:gravity="center"

            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:minHeight="@dimen/dimen_3"
                android:layout_marginRight="@dimen/line_0"
                android:layout_weight="3"
                android:background="@drawable/border_blanco"
                android:gravity="center"
                android:orientation="vertical">

                <com.med.finder.cliente.utilidades.CustomFontTextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center|left"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginLeft="@dimen/line_4"
                    android:text="@string/str_hora_inicio"
                    android:textSize="@dimen/text"
                    app:fontAttr="@string/font_myraid_bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/dimen_3"
                android:layout_weight="1"
                android:background="@drawable/border_blanco_negro"
                android:layout_marginLeft="@dimen/line_0"
                android:gravity="center"
                android:minHeight="@dimen/dimen_0"
                android:orientation="vertical">
                <com.med.finder.cliente.utilidades.CustomFontTextView
                    android:id="@+id/lblInicio"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/dimen_3"
                    android:minHeight="@dimen/dimen_3"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_1"
                    app:fontAttr="@string/font_myraid_roman" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/line_2"
            android:background="@color/theme_window_background"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:minHeight="@dimen/dimen_3"
                android:layout_marginRight="@dimen/line_0"
                android:layout_weight="3"
                android:background="@drawable/border_blanco"
                android:gravity="center"
                android:orientation="vertical">

                <com.med.finder.cliente.utilidades.CustomFontTextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center|left"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginLeft="@dimen/line_4"
                    android:text="@string/str_hora_fin"
                    android:textSize="@dimen/text"
                    app:fontAttr="@string/font_myraid_bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/dimen_3"
                android:layout_weight="1"
                android:background="@drawable/border_blanco_negro"
                android:layout_marginLeft="@dimen/line_0"
                android:gravity="center"
                android:minHeight="@dimen/dimen_0"
                android:orientation="vertical">
                <com.med.finder.cliente.utilidades.CustomFontTextView
                    android:id="@+id/lblFin"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/dimen_3"
                    android:minHeight="@dimen/dimen_3"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_1"
                    app:fontAttr="@string/font_myraid_roman" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/line_2"
            android:background="@color/theme_window_background"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:minHeight="@dimen/dimen_3"
                android:layout_marginRight="@dimen/line_0"
                android:layout_weight="3"
                android:background="@drawable/border_blanco"
                android:gravity="center"
                android:orientation="vertical">

                <com.med.finder.cliente.utilidades.CustomFontTextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center|left"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginLeft="@dimen/line_4"
                    android:text="@string/str_atencion"
                    android:textSize="@dimen/text"
                    app:fontAttr="@string/font_myraid_bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/dimen_3"
                android:layout_weight="1"
                android:background="@drawable/border_blanco_negro"
                android:layout_marginLeft="@dimen/line_0"
                android:gravity="center"
                android:minHeight="@dimen/dimen_0"
                android:orientation="vertical">
                <com.med.finder.cliente.utilidades.CustomFontTextView
                    android:id="@+id/lblAtencion"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/dimen_3"
                    android:minHeight="@dimen/dimen_3"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_1"
                    app:fontAttr="@string/font_myraid_roman" />
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>




</LinearLayout>
