<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/border_blanco_negro"
        android:padding="@dimen/line_3"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <com.med.finder.cliente.utilidades.CustomFontTextView
                android:id="@+id/lblNombre"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/dimen_3"
                app:textAllCaps="true"
                android:gravity="center"
                android:textSize="@dimen/text_2"
                app:fontAttr="@string/font_myraid_bold" />
        </LinearLayout>




        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginBottom="@dimen/line_4"
            android:orientation="horizontal">

            <RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:clickable="true"
                android:layout_margin="@dimen/line_4"
                android:layout_weight="3"
                android:orientation="horizontal">


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image"
                    android:layout_width="@dimen/dimen_7"
                    android:layout_height="@dimen/dimen_7"
                    android:clickable="false"
                    android:layout_centerInParent="true"
                    android:scaleType="centerCrop"
                    app:border_color="@color/colorPrimary"
                    app:border_width="1dp" />
                <ImageView
                    android:id="@+id/imageFavorito"
                    android:layout_width="@dimen/dimen_3"
                    android:layout_height="@dimen/dimen_3"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentBottom="true"
                    android:clickable="false"
                    app:srcCompat="@drawable/ic_favorito_on" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:gravity="center"
                    android:minHeight="@dimen/dimen_0"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btnAceptar"
                        android:layout_width="@dimen/rating"
                        android:layout_height="@dimen/rating"
                        android:background="@drawable/button_corazon" />


                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginRight="@dimen/line_4"
                android:layout_weight="1"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/dimen_3"
                    android:gravity="center"
                    android:background="@drawable/border_blanco"
                    android:orientation="vertical">

                    <com.med.finder.cliente.utilidades.CustomFontTextView
                        android:id="@+id/lblEspecialidad"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"

                        android:gravity="center"
                        android:layout_weight="1"
                        android:textColor="@color/primary_text"
                        android:textSize="@dimen/text_2"
                        app:fontAttr="@string/font_myraid_roman"  />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/dimen_3"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/dimen_0"
                    android:background="@drawable/border_blanco"
                    android:orientation="vertical">
                    <com.med.finder.cliente.utilidades.CustomFontTextView
                        android:id="@+id/lblTipo"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:textColor="@color/primary_text"
                        android:textSize="@dimen/text_2"
                        app:fontAttr="@string/font_myraid_bold"  />
                </LinearLayout>


            </LinearLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border_blanco"
            android:gravity="center"
            android:layout_marginTop="@dimen/line_3"
            android:padding="@dimen/line_2"
            android:orientation="vertical">
            <com.med.finder.cliente.utilidades.CustomFontTextView
                android:id="@+id/lblDetalle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/dimen_3"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_1"
                app:fontAttr="@string/font_myraid_roman" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/line_2"
            android:background="@color/theme_window_background"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:minHeight="@dimen/dimen_3"
                android:layout_marginRight="@dimen/line_0"
                android:layout_weight="3"
                android:background="@drawable/border_blanco"
                android:gravity="center"
                android:orientation="vertical">

                <com.med.finder.cliente.utilidades.CustomFontTextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center|left"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginLeft="@dimen/line_4"
                    android:text="@string/str_fecha"
                    android:textSize="@dimen/text"
                    app:fontAttr="@string/font_myraid_bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/dimen_3"
                android:layout_weight="1"
                android:background="@drawable/border_blanco_negro"
                android:layout_marginLeft="@dimen/line_0"
                android:gravity="center"
                android:minHeight="@dimen/dimen_0"
                android:orientation="vertical">
                <com.med.finder.cliente.utilidades.CustomFontTextView
                    android:id="@+id/lblFecha"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/dimen_3"
                    android:minHeight="@dimen/dimen_3"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_1"
                    app:fontAttr="@string/font_myraid_roman" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/line_2"
            android:background="@color/theme_window_background"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:minHeight="@dimen/dimen_3"
                android:layout_marginRight="@dimen/line_0"
                android:layout_weight="3"
                android:background="@drawable/border_blanco"
                android:gravity="center"
                android:orientation="vertical">

                <com.med.finder.cliente.utilidades.CustomFontTextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center|left"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginLeft="@dimen/line_4"
                    android:text="@string/str_hora"
                    android:textSize="@dimen/text"
                    app:fontAttr="@string/font_myraid_bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/dimen_3"
                android:layout_weight="1"
                android:background="@drawable/border_blanco_negro"
                android:layout_marginLeft="@dimen/line_0"
                android:gravity="center"
                android:minHeight="@dimen/dimen_0"
                android:orientation="vertical">
                <com.med.finder.cliente.utilidades.CustomFontTextView
                    android:id="@+id/lblHora"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/dimen_3"
                    android:minHeight="@dimen/dimen_3"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_1"
                    app:fontAttr="@string/font_myraid_roman" />
            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/line_4"
            android:id="@+id/viewCancelar"
            android:visibility="gone"
            android:gravity="center|right"
            android:orientation="horizontal">
            android:orientation="horizontal">
            <com.med.finder.cliente.utilidades.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:minHeight="@dimen/dimen_3"
                android:text="@string/str_cancelar_cita"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_1"
                app:fontAttr="@string/font_myraid_bold" />
            <Button
                android:id="@+id/btnCancelar"
                android:layout_width="@dimen/rating"
                android:layout_height="@dimen/rating"
                android:layout_margin="@dimen/margin_1"

                android:background="@drawable/button_cancel" />

        </LinearLayout>



    </LinearLayout>

</LinearLayout>


